force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/msmxSheet__MashmatrixPermissionOperation__mdt.object-meta.xml
<CustomObject>
    <label>Mashmatrix Permission Operation</label>
</CustomObject>