force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/fields/msmxSheet__AllowBulkCopy__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AllowBulkCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Bulk-copy Records</label>
    <type>Checkbox</type>
</CustomField>