force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/fields/msmxSheet__AllowCreate__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AllowCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Create Records</label>
    <type>Checkbox</type>
</CustomField>