force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/fields/msmxSheet__AllowDownload__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AllowDownload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Download Records</label>
    <type>Checkbox</type>
</CustomField>