force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/fields/msmxSheet__AllowReadSheetData__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AllowReadSheetData__c</fullName>
    <label>Allow Read In-Sheet Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
                <default>true</default>
                <label>Enabled</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>