force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/fields/msmxSheet__ObjectLevelAccessControl__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__ObjectLevelAccessControl__c</fullName>
    <label>Object-level Access Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inherit</fullName>
                <default>true</default>
                <label>Inherit</label>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>