force-app/main/default/objects/msmxSheet__MashmatrixPermissionOperation__mdt/fields/msmxSheet__UpdateLimit__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__UpdateLimit__c</fullName>
    <label>Update Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>